# circuit-scope

./: .gitignore  Caddyfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bf19790dfac_add_project_tags_and_preview_fields.py  33e1eb7f49d5_add_notifications.py  3e2d5a4c1b7a_add_comment_threads.py  4f1e2d3c4b5a_add_project_processing_status.py  52235a18439d_init_schema.py  5g2f3d4e5c6b_add_view_count.py
backend/app/: main.py
backend/app/api/: dependencies.py  deps.py  router.py
backend/app/api/routes/: auth.py  comment_threads.py  health.py  notifications.py  projects.py  reviews.py
backend/app/api/schemas/: auth.py  comment_threads.py  notifications.py  projects.py  reviews.py
backend/app/core/: config.py  rate_limit.py
backend/app/services/: comment_threads.py  notifications.py  previews.py  projects.py  reviews.py  svg_utils.py  users.py  utils.py
backend/app/services/storage/: base.py  factory.py  local.py  s3.py
backend/db/: models.py  sessions.py
backend/tests/: conftest.py  test_smoke.py
deploy/: Caddyfile  build_and_push.sh  deploy.sh  docker-compose.yml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.vue  components.json  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: AppHeader.vue
frontend/composables/: useAppSeo.ts  useBackendUser.ts  useCanvasInteraction.ts  useCommentThreads.ts  useLayerManager.ts  usePagination.ts  useProjectData.ts  useProjectSubmission.ts  useProjects.ts
frontend/layouts/: default.vue
frontend/lib/: alias.ts  (+4 more)
scripts/: test-backend.sh  test-frontend.sh
(+54 files in other folders)
