[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi-users>=14.0.1",
    "fastapi[standard]>=0.120.0",
    "greenlet>=3.2.4",
    "passlib>=1.7.4",
    "psycopg>=3.2.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "boto3>=1.35.0",
    "slowapi>=0.1.9",
]
